# campusMarketRL

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  inference.py  main.py  pyproject.toml  requirements.txt  test_env.py
baseline/: inference.py
campus_market_env/: __init__.py  _compat.py  client.py  config.py  enums.py  models.py  openenv.yaml
campus_market_env/server/: Dockerfile  __init__.py  app.py  competitor_model.py  engine.py  environment.py  requirements.txt  state_manager.py  student_model.py  trend_model.py
campus_market_env/utils/: __init__.py
docs/: GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  QUICK_REFERENCE.md
scripts/: test_env.py
static/: index.html
