[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "campus_market_env"
version = "0.1.0"
description = "Campus Market RL Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "numpy>=1.26",
  "pydantic>=2.8,<3.0",
  "uvicorn>=0.30,<1.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["campus_market_env*"]

[tool.setuptools.package-data]
campus_market_env = ["openenv.yaml", "server/Dockerfile", "server/requirements.txt"]
